Use full path to ifconfig/route binaries in VNET config example script
Before this change, the jail.conf example for VNET jails produces the
following error when running "service jail start vnet":

Starting jails: cannot start jail  "vnet":
jail: vnet: exec ifconfig: No such file or directory
jail: vnet: ifconfig epair154 create up: failed

The solution is to provide full paths to both ifconfig and route
(/sbin/ifconfig and /sbin/route, respectively) in the example.
Afterwards, the jail starts without errors. This seems to be the only
occurance in the chapter since the other examples do not have any
exec.{prestart,start,poststop} sections.

--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -752,13 +752,13 @@ vnet {
   $epair = "epair${id}";
 
   # ADD TO bridge INTERFACE
-  exec.prestart  = "ifconfig ${epair} create up";
-  exec.prestart += "ifconfig ${epair}a up descr jail:${name}";
-  exec.prestart += "ifconfig ${bridge} addm ${epair}a up";
-  exec.start    += "ifconfig ${epair}b ${ip} up";
-  exec.start    += "route add default ${gateway}";
-  exec.poststop = "ifconfig ${bridge} deletem ${epair}a";
-  exec.poststop += "ifconfig ${epair}a destroy";
+  exec.prestart  = "/sbin/ifconfig ${epair} create up";
+  exec.prestart += "/sbin/ifconfig ${epair}a up descr jail:${name}";
+  exec.prestart += "/sbin/ifconfig ${bridge} addm ${epair}a up";
+  exec.start    += "/sbin/ifconfig ${epair}b ${ip} up";
+  exec.start    += "/sbin/route add default ${gateway}";
+  exec.poststop = "/sbin/ifconfig ${bridge} deletem ${epair}a";
+  exec.poststop += "/sbin/ifconfig ${epair}a destroy";
 }
 ....
 
