--- a/website/content/en/community/_index.adoc
+++ b/website/content/en/community/_index.adoc
@@ -28,7 +28,7 @@ On twitter, you can follow https://twitter.com/freebsd[@freebsd], https://twitte
 
 On Reddit, you can find the FreeBSD community link:https://www.reddit.com/r/freebsd/[here].
 
-Beyond officially run community spaces, there are https://www.freebsd.org/usergroups/[User Groups] in {{< get-usergroups-info "countries" >}} countries, along with highly active FreeBSD communities on https://twitter.com/search?q=freebsd[Twitter], https://stackoverflow.com/questions/tagged/freebsd[StackOverflow], https://serverfault.com/questions/tagged/freebsd[ServerFault], and https://www.meetup.com/topics/freebsd/[MeetUp.com], among many other technology-related spaces.
+Beyond officially run community spaces, there are many https://www.freebsd.org/usergroups/[User Groups], along with highly active FreeBSD communities on https://twitter.com/search?q=freebsd[Twitter], https://stackoverflow.com/questions/tagged/freebsd[StackOverflow], https://serverfault.com/questions/tagged/freebsd[ServerFault], and https://www.meetup.com/topics/freebsd/[MeetUp.com], among many other technology-related spaces.
 
 The https://wiki.freebsd.org/[FreeBSD wiki] contains information about development and related projects.
 
