Add Marek Zarychta <zarychtam@plan-b.pwste.edu.pl>
for net-mgmt/libfds and net-mgmt/ipfixcol2

PR:		280681, 280682

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -1323,6 +1323,7 @@
 * Marco van de Voort <mailto:marcov@stack.nl[marcov@stack.nl]>
 * Marcos Andre Hermann <mailto:udialup@gmail.com[udialup@gmail.com]>
 * Marcus Vinicius Bastos Leandro <mailto:mvleandro@gmail.com[mvleandro@gmail.com]>
+* Marek Zarychta <mailto:zarychtam@plan-b.pwste.edu.pl[zarychtam@plan-b.pwste.edu.pl]>
 * Marin Atanasov <mailto:dnaeon@gmail.com[dnaeon@gmail.com]>
 * Mario Lobo <mailto:lobo@bsd.com.br[lobo@bsd.com.br]>
 * Marius Nünnerich <mailto:marius@nuenneri.ch[marius@nuenneri.ch]>
