--- a/website/content/en/status/report-2024-04-2024-06/portmgr.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/portmgr.adoc
@@ -1,7 +1,7 @@
 === Ports Collection
 
 Links: +
-link:https://www.FreeBSD.org/ports/[About FreeBSD Ports] URL:link:https://www.FreeBSD.org/ports/[] +
+link:https://ports.FreeBSD.org[About FreeBSD Ports] URL:link:https://ports.FreeBSD.org[] +
 link:https://docs.freebsd.org/en/articles/contributing/#ports-contributing[Contributing to Ports] URL: link:https://docs.freebsd.org/en/articles/contributing/#ports-contributing[]
 +
 link:https://www.freebsd.org/portmgr/[Ports Management Team] URL: link:https://www.freebsd.org/portmgr/[] +
