searchable index of all ports is at ports.freebsd.org
PR: 280816

--- a/documentation/content/en/articles/linux-users/_index.adoc
+++ b/documentation/content/en/articles/linux-users/_index.adoc
@@ -92,7 +92,7 @@ If an application installation does not require any customization, installing th
 Compile the port instead whenever an application requires customization of the default options.
 If needed, a custom package can be compiled from ports using `make package`.
 
-A complete list of all available ports and packages can be found https://www.freebsd.org/ports/[here].
+A complete list of all available ports and packages can be found https://ports.freebsd.org[here].
 
 [[packages]]
 === Packages
