--- a/documentation/content/en/articles/releng/_index.adoc
+++ b/documentation/content/en/articles/releng/_index.adoc
@@ -235,7 +235,7 @@ The release notes and errata files also need to be adjusted for the new release 
 * [.filename]#src/release/doc/en_US.ISO8859-1/errata/article.xml#
 
 Sysinstall should be updated to note the number of available ports and the amount of disk space required for the Ports Collection.
-footnote:[FreeBSD Ports Collection https://www.FreeBSD.org/ports]
+footnote:[FreeBSD Ports Collection https://ports.FreeBSD.org]
 This information is currently kept in [.filename]#src/usr.sbin/bsdinstall/dist.c#.
 
 After the release has been built, a number of files should be updated to announce the release to the world.
@@ -317,7 +317,7 @@ For example, it would be unwise to distribute binaries that were built on a syst
 
 === Contributed Software ("ports")
 
-The https://www.FreeBSD.org/ports[FreeBSD Ports collection] is a collection of over {numports} third-party software packages available for FreeBSD.
+The https://ports.FreeBSD.org[FreeBSD Ports collection] is a collection of over {numports} third-party software packages available for FreeBSD.
 The `{portmgr}` is responsible for maintaining a consistent ports tree that can be used to create the binary packages that accompany official FreeBSD releases.
 
 === Release ISOs
