--- a/documentation/content/en/books/handbook/l10n/_index.adoc
+++ b/documentation/content/en/books/handbook/l10n/_index.adoc
@@ -520,7 +520,7 @@ Additional Fcitx and Uim applications are also available.
 i18n applications are programmed using i18n kits under libraries.
 These allow developers to write a simple file and translate displayed menus and texts to each language.
 
-The link:https://www.FreeBSD.org/ports/[FreeBSD Ports Collection] contains many applications with built-in support for wide or multibyte characters for several languages.
+The link:https://ports.FreeBSD.org[FreeBSD Ports Collection] contains many applications with built-in support for wide or multibyte characters for several languages.
 Such applications include `i18n` in their names for easy identification.
 However, they do not always support the language needed.
 
