--- a/documentation/content/en/books/handbook/l10n/_index.po
+++ b/documentation/content/en/books/handbook/l10n/_index.po
@@ -1134,7 +1134,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/l10n/_index.adoc:526
 msgid ""
-"The link:https://www.FreeBSD.org/ports/[FreeBSD Ports Collection] contains "
+"The link:https://ports.FreeBSD.org[FreeBSD Ports Collection] contains "
 "many applications with built-in support for wide or multibyte characters for "
 "several languages.  Such applications include `i18n` in their names for easy "
 "identification.  However, they do not always support the language needed."
