--- a/documentation/content/en/books/handbook/ports/_index.po
+++ b/documentation/content/en/books/handbook/ports/_index.po
@@ -120,7 +120,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/ports/_index.adoc:78
 msgid ""
-"However, over link:https://www.FreeBSD.org/ports/[{numports}] third-party "
+"However, over link:https://ports.FreeBSD.org[{numports}] third-party "
 "applications have already been ported to FreeBSD.  When feasible, these "
 "applications are made available for download as pre-compiled _packages_."
 msgstr ""
@@ -280,7 +280,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/ports/_index.adoc:122
 msgid ""
 "The FreeBSD web site maintains an up-to-date searchable list of all the "
-"available applications, at link:https://www.FreeBSD.org/ports/[Ports "
+"available applications, at link:https://ports.FreeBSD.org[Ports "
 "Portal]. The ports can be searched by application name or by software "
 "category."
 msgstr ""
@@ -300,7 +300,7 @@ msgstr ""
 msgid ""
 "If finding a particular application becomes challenging, try searching a "
 "site like https://sourceforge.net/[SourceForge] or https://github.com/"
-"[GitHub] then check back at the link:https://www.FreeBSD.org/ports/[Ports "
+"[GitHub] then check back at the link:https://ports.FreeBSD.org[Ports "
 "Portal] to see if the application has been ported."
 msgstr ""
 
