--- a/documentation/content/en/books/porters-handbook/special/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/special/_index.adoc
@@ -1712,7 +1712,7 @@ When set, [.filename]#bsd.gnome.mk# automatically scans [.filename]#pkg-plist# a
 [[gnome-components]]
 == GNOME Components
 
-For further help with a GNOME port, look at some of the link:https://www.FreeBSD.org/ports/gnome.html[existing ports] for examples.
+For further help with a GNOME port, look at some of the link:https://ports.FreeBSD.org[existing ports] for examples.
 The link:https://www.FreeBSD.org/gnome/[FreeBSD GNOME page] has contact information if more help is needed.
 The components are divided into GNOME components that are currently in use and legacy components.
 If the component supports argument, they are listed between parenthesis in the description.
