--- a/documentation/content/en/articles/releng/_index.po
+++ b/documentation/content/en/articles/releng/_index.po
@@ -635,7 +635,7 @@ msgstr ""
 msgid ""
 "Sysinstall should be updated to note the number of available ports and the "
 "amount of disk space required for the Ports Collection.  footnote:[FreeBSD "
-"Ports Collection https://www.FreeBSD.org/ports] This information is "
+"Ports Collection https://ports.FreeBSD.org] This information is "
 "currently kept in [.filename]#src/usr.sbin/bsdinstall/dist.c#."
 msgstr ""
 
@@ -882,7 +882,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/releng/_index.adoc:322
 msgid ""
-"The https://www.FreeBSD.org/ports[FreeBSD Ports collection] is a collection "
+"The https://ports.FreeBSD.org[FreeBSD Ports collection] is a collection "
 "of over {numports} third-party software packages available for FreeBSD.  The "
 "`{portmgr}` is responsible for maintaining a consistent ports tree that can "
 "be used to create the binary packages that accompany official FreeBSD "
