--- a/documentation/content/en/books/handbook/ports/_index.adoc
+++ b/documentation/content/en/books/handbook/ports/_index.adoc
@@ -73,7 +73,7 @@ The files that comprise a port contain all the necessary information to automati
 
 If the software has not already been adapted and tested on FreeBSD, the source code might need editing in order for it to install and run properly.
 
-However, over link:https://www.FreeBSD.org/ports/[{numports}] third-party applications have already been ported to FreeBSD.
+However, over link:https://ports.FreeBSD.org[{numports}] third-party applications have already been ported to FreeBSD.
 When feasible, these applications are made available for download as pre-compiled _packages_.
 
 Packages can be manipulated with the FreeBSD package management commands.
@@ -118,9 +118,9 @@ The remainder of this chapter explains how to use packages and ports to install 
 FreeBSD's list of available applications is growing all the time.
 There are a number of ways to find software to install:
 
-* The FreeBSD web site maintains an up-to-date searchable list of all the available applications, at link:https://www.FreeBSD.org/ports/[Ports Portal]. The ports can be searched by application name or by software category.
+* The FreeBSD web site maintains an up-to-date searchable list of all the available applications, at link:https://ports.FreeBSD.org[Ports Portal]. The ports can be searched by application name or by software category.
 * Dan Langille maintains https://www.freshports.org/[FreshPorts] which provides a comprehensive search utility and also tracks changes to the applications in the Ports Collection. Registered users can create a customized watch list in order to receive an automated email when their watched ports are updated.
-* If finding a particular application becomes challenging, try searching a site like https://sourceforge.net/[SourceForge] or https://github.com/[GitHub] then check back at the link:https://www.FreeBSD.org/ports/[Ports Portal] to see if the application has been ported.
+* If finding a particular application becomes challenging, try searching a site like https://sourceforge.net/[SourceForge] or https://github.com/[GitHub] then check back at the link:https://ports.FreeBSD.org[Ports Portal] to see if the application has been ported.
 * Search the binary package repository for an application using the man:pkg[8] command
 
 [[pkgng-intro]]
