2024Q2/clusteradm.adoc: typo fixed

--- a/website/content/en/status/report-2024-04-2024-06/clusteradm.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/clusteradm.adoc
@@ -32,7 +32,7 @@ Of the 290 jails in the cluster, 206 run stable/14.
 -----------------------------
 Total: Regular 133, Jails 290
 Total installations:      423
-Runnning -RELEASE|{-p*}:    0
+Running -RELEASE|{-p*}:    0
 Total geographic sites:    16
 ----
 
