2024Q2/ci.adoc: typo fixed

--- a/website/content/en/status/report-2024-04-2024-06/ci.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/ci.adoc
@@ -21,7 +21,7 @@ Concurrently, we collaborated with external projects and companies to enhance th
 Important completed tasks:
 * Added new hardware purchased by the FreeBSD Foundation in Chicago site to the CI cluster
 * Repurposed decommissioned pkg builder as build agent and added to the CI cluster
-* Adjusted the job dispatching mechanism based on the machine capbilitiy
+* Adjusted the job dispatching mechanism based on the machine capability
 * bofh@ merged link:https://reviews.freebsd.org/D43786[] as https://cgit.freebsd.org/src/commit/?id=cb9d4bb1fbb9ac0eb9f211656e91f9d5254c166c[Add preliminary in-tree CI infrastructure for developers] so they can replicate an environment or
 results similar to https://ci.FreeBSD.org[]
 * Decommission armv6 jobs for the main branch
