Status/2024Q2: Fixes suggested by vale

--- a/website/content/en/status/report-2024-04-2024-06/audio.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/audio.adoc
@@ -9,7 +9,9 @@ Important work since link:https://www.freebsd.org/status/report-2024-01-2024-03/
 
 * Asynchronous audio device detach link:https://cgit.freebsd.org/src/commit/?id=44e128fe9d92c1a544b801cb56e907a66ef34691[is now possible].
 This functionality already ships with FreeBSD 14.1-RELEASE, as well as 14-STABLE.
-* Got rid of the "snd_clone" device cloning framework used in man:sound[4] and replaced it with DEVFS_CDEVPRIV(9). More info about behavior changes in the link:https://cgit.freebsd.org/src/commit/?id=e8c0d15a64fadb4a330f2da7244becaac161bb70[commit description]. Also ships with 14.1-RELEASE and 14-STABLE.
+* Got rid of the "snd_clone" device cloning framework used in man:sound[4] and replaced it with DEVFS_CDEVPRIV(9).
+More info about behavior changes in the link:https://cgit.freebsd.org/src/commit/?id=e8c0d15a64fadb4a330f2da7244becaac161bb70[commit description].
+Also ships with 14.1-RELEASE and 14-STABLE.
 * Several man:sound[4] crash and bug fixes.
 * More out of the box support for man:snd_hda[4] laptop sound.
 * Series of commits that clean up and simplify parts of man:sound[4].
