--- a/website/content/en/status/report-2024-04-2024-06/github.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/github.adoc
@@ -20,7 +20,7 @@ Current status:
 
 We need help with automating the process:
 
- * Add automated testing that's context specific (for example, run igor over man pages).
+ * Add automated testing that is context specific (for example, run igor over man pages).
  * Add build/install tests that test-boot the resulting image.
  * Automate common tasks, like man page corrections, into staging process.
  * Add simple smoke testing for the staging branch for tier 1 architectures.
