--- a/website/content/en/status/report-2024-04-2024-06/kde.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/kde.adoc
@@ -8,7 +8,7 @@ Contact: Adriaan de Groot <kde@FreeBSD.org>
 
 The KDE on FreeBSD project packages CMake, Qt, and software from the KDE Community, for the FreeBSD ports tree.
 The software includes a full desktop environment called KDE Plasma (for both X11 and Wayland) and hundreds of applications that can be used on any FreeBSD machine.
-The mailto:kde@FreeBSD.org[KDE team] is part of mailto:desktop@FreeBSD.org[desktop@], building the software stack to make FreeBSD beautiful and usable as a daily-driver graphical desktop workstation.
+The mailto:kde@FreeBSD.org[KDE team] is part of mailto:desktop@FreeBSD.org[desktop@], building the software stack to make FreeBSD beautiful and usable as a daily driver graphical desktop workstation.
 
 We missed a quarter, while the broader KDE community celebrated the KDE Megarelease of KDE Frameworks 6, KDE Plasma 6 and KDE Gear.
 The latest software is still not available on FreeBSD, pending more testing and some integration work.
