--- a/website/content/en/status/report-2024-04-2024-06/capsicum-rs.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/capsicum-rs.adoc
@@ -1,4 +1,4 @@
-=== capsicum-rs
+=== Capsicum-rs
 
 Links: +
 link:https://github.com/dlrobertson/capsicum-rs[capsicum-rs on GitHub] URL: https://github.com/dlrobertson/capsicum-rs[]
@@ -6,14 +6,9 @@ link:https://github.com/asomers/capsicum-net[capsicum-net on GitHub] URL: https:
 
 Contact: Alan Somers <asomers@FreeBSD.org>
 
-Capsicum is a lightweight OS capability and sandbox framework implementing a
-hybrid capability system model.
+Capsicum is a lightweight OS capability and sandbox framework implementing a hybrid capability system model.
 
-I've adopted the library providing Rust bindings for Capsicum, and extended it
-with support for man:libcasper[3] and man:cap_net[3].
-It's already being used by package:net-mgmt/nfs-exporter[] and by a TLS-enabled
-FTP server (the FTP server is closed-source, but all of the interesting bits
-reside in an open source library, and an example server can be found at
-link:https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs/examples[]).
+I have adopted the library providing Rust bindings for Capsicum, and extended it with support for man:libcasper[3] and man:cap_net[3].
+It is already being used by package:net-mgmt/nfs-exporter[] and by a TLS-enabled FTP server (the FTP server is closed-source, but all of the interesting bits reside in an open source library, and an example server can be found at link:https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs/examples[]).
 
 Sponsor: Axcient
