--- a/website/content/en/status/report-2024-04-2024-06/portmgr.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/portmgr.adoc
@@ -2,8 +2,7 @@
 
 Links: +
 link:https://ports.FreeBSD.org[About FreeBSD Ports] URL:link:https://ports.FreeBSD.org[] +
-link:https://docs.freebsd.org/en/articles/contributing/#ports-contributing[Contributing to Ports] URL: link:https://docs.freebsd.org/en/articles/contributing/#ports-contributing[]
-+
+link:https://docs.freebsd.org/en/articles/contributing/#ports-contributing[Contributing to Ports] URL: link:https://docs.freebsd.org/en/articles/contributing/#ports-contributing[] +
 link:https://www.freebsd.org/portmgr/[Ports Management Team] URL: link:https://www.freebsd.org/portmgr/[] +
 link:http://ftp.freebsd.org/pub/FreeBSD/ports/ports/[Ports Tarball] URL: link:http://ftp.freebsd.org/pub/FreeBSD/ports/ports/[]
 
@@ -20,35 +19,37 @@ Compared to last quarter, this means a large decrease in the number of commits o
 The number of ports also increased (up from 32,244).
 
 The most active committers to main were:
-       sunpoet   3739
-       yuri      1450
-       jbeich     491
-       eduardo    220
-       bofh       200
-       diizzy     197
-       rene       188
-       fernape    156
-       jhale      133
-       arrowd     129
+
+* sunpoet   3739
+* yuri      1450
+* jbeich     491
+* eduardo    220
+* bofh       200
+* diizzy     197
+* rene       188
+* fernape    156
+* jhale      133
+* arrowd     129
 
 A lot has happened in the ports tree in the last three quarter, an excerpt of the major software upgrades is:
-- pkg 1.21.3
-- Default version of lazarus switched to 3.4.0
-- Default version of fpc switched to 3.2.3
-- Default version of python switched to 3.11
-- chromium      updated from   123.0.6312.86 to  126.0.6478.126
-- firefox       updated from         124.0.1 to         127.0.2
-- firefox-esr   updated from        115.9.0 to         115.12.1
-- rust          updated from          1.77.0 to          1.79.0
-- sdl2          updated from           2.6.3 to           2.8.2
-- wlroots       updated from          0.17.2 to          0.17.4
-- wine          updated from           8.0.2 to             9.0
-- wine-devel    updated from            9.4 to             9.11
-- xorg-server   updated from         21.1.11 to         21.1.13
-- qt5           updated from         5.15.13 to         5.15.14
-- qt6           updated from           6.6.3 to           6.7.2
-- kf5           updated from         5.115.0 to         5.116.0
-- kf6           updated from           6.0.0 to           6.3.0
-- plasma6       updated from           6.0.2 to           6.1.1
+
+* pkg 1.21.3
+* Default version of lazarus switched to 3.4.0
+* Default version of fpc switched to 3.2.3
+* Default version of python switched to 3.11
+* chromium      updated from   123.0.6312.86 to  126.0.6478.126
+* firefox       updated from         124.0.1 to         127.0.2
+* firefox-esr   updated from        115.9.0 to         115.12.1
+* rust          updated from          1.77.0 to          1.79.0
+* sdl2          updated from           2.6.3 to           2.8.2
+* wlroots       updated from          0.17.2 to          0.17.4
+* wine          updated from           8.0.2 to             9.0
+* wine-devel    updated from            9.4 to             9.11
+* xorg-server   updated from         21.1.11 to         21.1.13
+* qt5           updated from         5.15.13 to         5.15.14
+* qt6           updated from           6.6.3 to           6.7.2
+* kf5           updated from         5.115.0 to         5.116.0
+* kf6           updated from           6.0.0 to           6.3.0
+* plasma6       updated from           6.0.2 to           6.1.1
 
 During the last quarter, pkgmgr@ ran 24 exp-runs to test various ports upgrades, updates to default versions of ports, subpackage support and base system changes.
