Status/2024Q2: Publish report

--- a/website/content/en/status/_index.adoc
+++ b/website/content/en/status/_index.adoc
@@ -7,7 +7,7 @@ include::shared/en/urls.adoc[]
 
 = FreeBSD Status Reports
 
-== Next Quarterly Status Report submissions (April - June) due: June 30th, 2024
+== Next Quarterly Status Report submissions (July - September) due: September 30th, 2024
 
 If you are interested in submitting status reports or you are curious about how the publication process works, please see our link:{freebsd-status-report-process}[status report process description].
 
@@ -24,6 +24,7 @@ These status reports may be reproduced in whole or in part, as long as the sourc
 == 2024
 
 * link:report-2024-01-2024-03/[January, 2024 - March, 2024]
+* link:report-2024-04-2024-06/[April, 2024 - June, 2024]
 
 == 2023
 
