Status/2024Q2/riscv.adoc: Fix contacts list

--- a/website/content/en/status/report-2024-04-2024-06/riscv.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/riscv.adoc
@@ -3,8 +3,8 @@
 Links: +
 link:https://wiki.freebsd.org/riscv[Wiki Homepage] URL: link:https://wiki.freebsd.org/riscv[] +
 
-Contact: Mitchell Horne <mhorne@FreeBSD.org>
-Contact: Ruslan Bukin <br@FreeBSD.org>
+Contact: Mitchell Horne <mhorne@FreeBSD.org> +
+Contact: Ruslan Bukin <br@FreeBSD.org> +
 Contact: Jari Sihvola <jsihv@gmx.com>
 
 The FreeBSD/RISC-V project is providing support for running FreeBSD on the link:https://riscv.org[RISC-V Instruction Set Architecture].
