Status/2024Q2/gcc.adoc: Add missing line break

--- a/website/content/en/status/report-2024-04-2024-06/gcc.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/gcc.adoc
@@ -4,7 +4,7 @@ Links: +
 link:https://gcc.gnu.org/[GCC Project] URL: link:https://gcc.gnu.org/[] +
 link:https://gcc.gnu.org/gcc-11/[GCC 11 release series] URL: link:https://gcc.gnu.org/gcc-11/[] +
 link:https://gcc.gnu.org/gcc-12/[GCC 12 release series] URL: link:https://gcc.gnu.org/gcc-12/[] +
-link:https://gcc.gnu.org/gcc-13/[GCC 13 release series] URL: link:https://gcc.gnu.org/gcc-13/[]
+link:https://gcc.gnu.org/gcc-13/[GCC 13 release series] URL: link:https://gcc.gnu.org/gcc-13/[] +
 link:https://gcc.gnu.org/gcc-14/[GCC 14 release series] URL: link:https://gcc.gnu.org/gcc-14/[] +
 
 Contact: Lorenzo Salvadore <salvadore@FreeBSD.org>
