--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -55,6 +55,7 @@ The latest snapshots from our link:{handbook}cutting-edge/#stable[FreeBSD-STABLE
 
 For historical information about branches, release dates, types, and EOL dates, see link:../security/unsupported/[Unsupported Releases].
 
+* *13.2* ({rel132-current-date}) _link:{u-rel132-announce}[Announcement] : link:{u-rel132-notes}[Release Notes] : link:{u-rel132-installation}[Installation Instructions] : link:{u-rel132-hardware}[Hardware Compatibility List] : link:{u-rel132-readme}[Readme] : link:{u-rel132-errata}[Errata] : link:{u-rel132-signatures}[Signed Checksums]_
 * *13.1* ({rel131-current-date}) _link:{u-rel131-announce}[Announcement] : link:{u-rel131-notes}[Release Notes] : link:{u-rel131-installation}[Installation Instructions] : link:{u-rel131-hardware}[Hardware Compatibility List] : link:{u-rel131-readme}[Readme] : link:{u-rel131-errata}[Errata] : link:{u-rel131-signatures}[Signed Checksums]_
 * *{rel130-current}* ({rel130-current-date}) _link:{u-rel130-announce}[Announcement] : link:{u-rel130-notes}[Release Notes] : link:{u-rel130-installation}[Installation Instructions] : link:{u-rel130-hardware}[Hardware Compatibility List] : link:{u-rel130-readme}[Readme] : link:{u-rel130-errata}[Errata] : link:{u-rel130-signatures}[Signed Checksums]_
 * *12.4* ({rel124-current-date}) _link:{u-rel124-announce}[Announcement] : link:{u-rel124-notes}[Release Notes] : link:{u-rel124-installation}[Installation Instructions] : link:{u-rel124-hardware}[Hardware Compatibility List] : link:{u-rel124-readme}[Readme] : link:{u-rel124-errata}[Errata] : link:{u-rel124-signatures}[Signed Checksums]_
