documentation: Fix all warnings
All warnings related to tables with unfinished rows.

--- a/documentation/content/de/books/handbook/multimedia/_index.adoc
+++ b/documentation/content/de/books/handbook/multimedia/_index.adoc
@@ -270,7 +270,7 @@ Es ist nicht genug Speicher verfügbar, um das Gerät zu betreiben.
 |`xxx: can't open /dev/dsp!`
 |
 
-Überprüfen Sie mit `fstat | grep dsp` ob eine andere Anwendung das Gerät geöffnet hat. Häufige Störenfriede sind esound oder die Sound-Unterstützung von KDE.
+Überprüfen Sie mit `fstat \| grep dsp` ob eine andere Anwendung das Gerät geöffnet hat. Häufige Störenfriede sind esound oder die Sound-Unterstützung von KDE.
 |===
 
 Moderne Grafikkarten beinhalten oft auch ihre eigenen Soundtreiber, um HDMI zu verwenden. Diese Audiogeräte werden manchmal vor der eigentlichen, separaten Soundkarte aufgeführt und dadurch nicht als das Standardgerät zum Abspielen von Tönen benutzt. Um zu prüfen, ob das der Fall ist, führen Sie dmesg aus und suchen Sie nach der Zeichenfolge `pcm`. Die Ausgabe sieht in etwa so aus:
