--- a/documentation/content/zh-cn/books/handbook/multimedia/_index.adoc
+++ b/documentation/content/zh-cn/books/handbook/multimedia/_index.adoc
@@ -233,7 +233,7 @@ IRQ设置不正确。确信设定的IRQ和声卡的IRQ是一样的。
 |`xxx: can't open /dev/dsp!`
 |
 
-使用命令 `fstat | grep dsp` 进行检查是否有其它的程序打开了设备。 值得注意的是 esound 和 KDE 提供的声卡支持经常是造成麻烦的祸根。
+使用命令 `fstat \| grep dsp` 进行检查是否有其它的程序打开了设备。 值得注意的是 esound 和 KDE 提供的声卡支持经常是造成麻烦的祸根。
 |===
 
 另一个问题是许多新式的显卡本身包含它们自己的声音驱动， 用以配合 HDMI 这样的设备使用。 这个声音设备有时会在真正的声卡之前被探测到， 从而成为默认的回放设备， 而使真正的声卡无法发声。 要检查这种情况， 运行 dmesg 并观察 `pcm`。 其输出类似下面这样：
