--- a/documentation/content/zh-tw/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/zh-tw/books/porters-handbook/makefiles/_index.adoc
@@ -1466,6 +1466,7 @@ These variables are available:
 
 |`GH_TUPLE`
 |`GH_TUPLE` allows putting `GH_ACCOUNT`, `GH_PROJECT`, `GH_TAGNAME`, and `GH_SUBDIR` into a single variable. The format is _account_`:`_project_`:`_tagname_`:`_group_`/`_subdir_. The `/`_subdir_ part is optional. It is helpful when there is more than one GitHub project from which to fetch.
+|(none)
 |===
 
 [IMPORTANT]
@@ -1871,6 +1872,7 @@ Similar to GitHub, if the distribution file comes from https://gitlab.com[gitlab
 
 |`GL_TUPLE`
 |`GL_TUPLE` allows putting `GL_SITE`, `GL_ACCOUNT`, `GL_PROJECT`, `GL_COMMIT`, and `GL_SUBDIR` into a single variable. The format is _site_`:`_account_`:`_project_`:`_commit_`:`_group_`/`_subdir_. The _site_`:` and `/`_subdir_ part is optional. It is helpful when there are more than one GitLab project from which to fetch.
+|(none)
 |===
 
 [[makefile-master_sites-gitlab-ex1]]
