--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -120,6 +120,20 @@ This section covers changes and additions to userland applications, contributed 
 [[userland-contrib]]
 === Contributed Software
 
+`sqlite3` has been upgraded to 3.46.0a
+
+`OpenSSH` has been to upgraded to 9.7p1.
+This release contains mostly bugfixes.
+It also makes support for the DSA signature algorithm a compile-time option, with plans to disable it upstream later this year and remove support entirely in 2025.
+
+LLVM and the `clang` compiler have been upgraded to version 18.1.5.
+
+`bc` has been updated to version 6.7.6.
+
+`atf` has been updated to 0.22 snapshot 55c21b2c.
+
+`libarchive` has been updated to 3.7.4.
+
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
@@ -141,6 +155,10 @@ This section covers changes and additions to devices and device drivers since {r
 
 [[drivers-device]]
 === Device Drivers
+
+The man:irdma[4] driver has been updted.
+
+The man:ice[4] driver has been updated.
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
