--- a/website/content/en/releases/13.4R/schedule.adoc
+++ b/website/content/en/releases/13.4R/schedule.adoc
@@ -37,7 +37,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA1 builds begin |2 August 2024 |2 August 2024 |First beta test snapshot.
 |BETA2 builds begin |9 August 2024 |9 August 2024 |Second beta test snapshot.
 |BETA3 builds begin |16 August 2024 |16 August 2024 |Third beta test snapshot.
-|RC1 builds begin |23 August 2024 |- |First release candidate.
+|RC1 builds begin |23 August 2024 |23 August 2024 |First release candidate.
 |RELEASE builds begin |30 August 2024 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |3 September 2024 |- |{localRel}-RELEASE press release.
 |===
