New committer (src): Igor Ostapenko (igoro)
Complete steps 1-4 from Committer's Guide, "7.1 For New Committers".

Reviewed by:	markj, kp
Approved by:	markj (mentor), kp (mentor)
Differential Revision:	https://reviews.freebsd.org/D46436

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1128,6 +1128,9 @@ include::{include-path}rodrigc.key[]
 === `{michaelo}`
 include::{include-path}michaelo.key[]
 
+=== `{igoro}`
+include::{include-path}igoro.key[]
+
 === `{ler}`
 include::{include-path}ler.key[]
 
