--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1376,6 +1376,10 @@
 :iedowse-email: iedowse@FreeBSD.org
 :iedowse: {iedowse-name} <{iedowse-email}>
 
+:igoro-name: Igor Ostapenko
+:igoro-email: igoro@FreeBSD.org
+:igoro: {igoro-name} <{igoro-email}>
+
 :ijliao-name: Ying-Chieh Liao
 :ijliao-email: ijliao@FreeBSD.org
 :ijliao: {ijliao-name} <{ijliao-email}>
