--- a/documentation/content/zh-tw/books/faq/_index.adoc
+++ b/documentation/content/zh-tw/books/faq/_index.adoc
@@ -1,13 +1,15 @@
 ---
-title: FreeBSD 12.X and 13.X 常見問答集
+title: FreeBSD 常見問答集
 authors: 
   - author: FreeBSD 文件計畫
-copyright: 1995-2022 The FreeBSD Documentation Project
-trademarks: ["freebsd", "ibm", "ieee", "adobe", "intel", "linux", "microsoft", "opengroup", "sun", "netbsd", "general"]
-isIndex: true
+copyright: 1995-2023 The FreeBSD Documentation Project
+trademarks: ["freebsd", "ieee", "linux", "microsoft", "openbsd", "netbsd", "general"]
+bookOrder: 5
+tags: ["FAQ", "FreeBSD FAQ"]
+layout: single
 ---
 
-= FreeBSD {rel2-relx} and {rel-relx} 常見問答集
+= FreeBSD 常見問答集
 :doctype: book
 :toc: macro
 :toclevels: 1
@@ -18,22 +20,6 @@ isIndex: true
 :source-highlighter: rouge
 :experimental:
 :images-path: books/faq/
-:rel-numbranch: 4
-:rel-head: 14-CURRENT
-:rel-head-relx: 14.X
-:rel-head-releng: head/
-:rel-relx: 13.X
-:rel-stable: 13-STABLE
-:rel-releng: stable/13/
-:rel-relengdate: December 2018
-:rel2-relx: 12.X
-:rel2-stable: 12-STABLE
-:rel2-releng: stable/12/
-:rel2-relengdate: December 2018
-:rel3-relx: 11.X
-:rel3-stable: 11-STABLE
-:rel3-releng: stable/11/
-:rel3-relengdate: October 2016
 
 ifdef::env-beastie[]
 ifdef::backend-html5[]
