--- a/documentation/content/en/books/handbook/zfs/_index.adoc
+++ b/documentation/content/en/books/handbook/zfs/_index.adoc
@@ -1335,11 +1335,13 @@ For systems using EFI to boot, execute the following command:
 
 [source,shell]
 ....
-# gpart bootcode -p /boot/boot1.efifat -i 1 ada1
+# mount_msdosfs /dev/ada1p1 /boot/efi
+# cp /boot/loader.efi /boot/efi/efi/boot/bootx64.efi
+# umount /boot/efi
 ....
 
 Apply the bootcode to all bootable disks in the pool.
-See man:gpart[8] for more information.
+See man:gpart[8] and man:loader.efi[8] for more information.
 ====
 
 [[zfs-zpool-history]]
