authors: Update core and portmgr members
Sponsored by:	The FreeBSD Foundation

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3738,7 +3738,7 @@
 :bugmeister: {eadler}, {gavin}, {mva}, {koobs}, {gonzo}
 
 // FreeBSD Core Team
-:core-members: {seanc}, {bapt}, {kevans}, {markj}, {scottl}, {imp}, {emaste}, {gnn}, {hrs}
+:core-members: {allanjude}, {dch}, {glebius}, {hrs}, {lwhsu}, {mat}, {olivier}, {tcberner}
 :core-secretary-email: core-secretary@FreeBSD.org
 
 // FreeBSD Doc Engineering Team
@@ -3755,7 +3755,7 @@
 :pkgmgr-members: {antoine}, {bdrewery}
 
 // FreeBSD Ports Manager Team
-:portmgr-members: {mat}, {bapt}, {bofh}, {pizzamig}, {rene}, {tcberner}
+:portmgr-members: {mat}, {bapt}, {pizzamig}, {rene}, {tcberner}
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
