authors: Fix an error from aodc conversion
Sponsored by:	The FreeBSD Foundation

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3420,7 +3420,7 @@
 :trociny-email: trociny@FreeBSD.org
 :trociny: {trociny-name} <{trociny-email}>
 
-:truckman-name: Don 
+:truckman-name: Don “Truck” Lewis
 :truckman-email: truckman@FreeBSD.org
 :truckman: {truckman-name} <{truckman-email}>
 
