Add advisories affecting 13.3R, 14.0R, and 14.1R
FreeBSD-SA-24:09.libnv affects all supported releases
FreeBSD-SA-24:10.bhyve affects FreeBSD 14.x
FreeBSD-SA-24:11.ctl affects all supported releases
FreeBSD-SA-24:12.bhyve affects all supported releases
FreeBSD-SA-24:13.openssl affects FreeBSD 14.x
FreeBSD-SA-24:14.umtx affects all supported releases

--- a/website/content/en/releases/13.3R/errata.adoc
+++ b/website/content/en/releases/13.3R/errata.adoc
@@ -49,6 +49,10 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:06.ktrace.asc[FreeBSD-SA-24:06.ktrace] |7 August 2024 |ktrace(2) fails to detach when executing a setuid binary
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:07.nfsclient.asc[FreeBSD-SA-24:07.nfsclient] |7 August 2024 |NFS client accepts file names containing path separators
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:08.openssh.asc[FreeBSD-SA-24:08.openssh] |7 August 2024 |OpenSSH pre-authentication async signal safety issue
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:09.libnv.asc[FreeBSD-SA-24:09.libnv] |4 September 2024 |Multiple vulnerabilities in libnv
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:11.ctl.asc[FreeBSD-SA-24:11.ctl] |4 September 2024 |Multiple issues in ctl(4) CAM Target Layer
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:12.bhyve.asc[FreeBSD-SA-24:12.bhyve] |4 September 2024 |bhyve(8) privileged guest escape via USB controller
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:14.umtx.asc[FreeBSD-SA-24:14.umtx] |4 September 2024 |umtx Kernel panic or Use-After-Free
 |===
 
 [[errata]]
