- update FAQ (zh-tw) abstract translation to sync with the english version.

--- a/documentation/content/zh-tw/books/faq/_index.adoc
+++ b/documentation/content/zh-tw/books/faq/_index.adoc
@@ -43,9 +43,7 @@ endif::[]
 [.abstract-title]
 摘要
 
-這份文件是 FreeBSD {rel-relx} 和 {rel2-relx} 常見問答集 ( (FAQ) )。我們盡可能地讓這份 FAQ 提供有用的資訊 ; 如果您有任何改善建議，請寄到 https://lists.freebsd.org/subscription/freebsd-doc[FreeBSD 文件計畫郵件論壇]。
-
-本文件的最新版本可由 extref:{faq}[FreeBSD 網站]取得。 也可以由 https://download.freebsd.org/doc/[FreeBSD FTP 伺服器] 以 HTTP 下載單一大型 link:.[HTML] 檔或是其他格式的檔案。
+這份文件是 FreeBSD 常見問答集 ( (FAQ) )。我們盡可能地讓這份 FAQ 提供有用的資訊。
 
 '''
 
