--- a/website/content/en/releases/13.4R/schedule.adoc
+++ b/website/content/en/releases/13.4R/schedule.adoc
@@ -39,10 +39,11 @@ General discussions about the pending release and known issues should be sent to
 |BETA3 builds begin |16 August 2024 |16 August 2024 |Third beta test snapshot.
 |RC1 builds begin |23 August 2024 |23 August 2024 |First release candidate.
 |RC2 builds begin |30 August 2024 |30 August 2024 |Second release candidate.
+|RC3 builds begin |6 September 2024 |6 September 2024 |Third release candidate.
 |RELEASE builds begin |[.line-through]*30 August 2024* +
-6 September 2024 |- |{localRel}-RELEASE builds begin.
+13 September 2024 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |[.line-through]*3 September 2024* +
-10 September 2024 |- |{localRel}-RELEASE press release.
+17 September 2024 |- |{localRel}-RELEASE press release.
 |===
 
 "*" indicates "as-needed" items.
