--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -5,8 +5,8 @@ sidenav: download
 
 :releaseCurrent: 13.4-RELEASE
 :releaseBranch: 13-STABLE
-:releasePrev: X.Y-RELEASE
-:releaseNext: X.Y-RELEASE
+:releasePrev: 13.3-RELEASE
+:releaseNext: 13.5-RELEASE
 :releaseType: "release"
 
 include::shared/en/urls.adoc[]
@@ -68,44 +68,6 @@ Source-based upgrades (those based on recompiling the FreeBSD base system from s
 Upgrading FreeBSD should only be attempted after backing up _all_ data and configuration files.
 ====
 
-[[security-errata]]
-== Security and Errata
-
-This section lists the various Security Advisories and Errata Notices since {releasePrev}.
-
-[[security]]
-=== Security Advisories
-
-[.informaltable]
-[cols="1,1,1", frame="none", options="header"]
-|===
-| Advisory
-| Date
-| Topic
-
-|No advisories.
-|
-|
-
-|===
-
-[[errata]]
-=== Errata Notices
-
-[.informaltable]
-[cols="1,1,1", frame="none", options="header"]
-|===
-| Errata
-| Date
-| Topic
-
-|No notices.
-|
-|
-
-
-|===
-
 [[userland]]
 == Userland
 
@@ -116,6 +78,9 @@ This section covers changes and additions to userland applications, contributed 
 
 [[userland-programs]]
 === Userland Application Changes
+
+`libcapsicum` has been improved to cache more time zone information.
+This change reduces the number of calls to man:tzset[3] and improves performance.
 
 [[userland-contrib]]
 === Contributed Software
@@ -133,6 +98,8 @@ LLVM and the `clang` compiler have been upgraded to version 18.1.5.
 `atf` has been updated to 0.22 snapshot 55c21b2c.
 
 `libarchive` has been updated to 3.7.4.
+
+`capsicum-test` has been updated to snapshot eab7a83b.
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -159,6 +126,10 @@ This section covers changes and additions to devices and device drivers since {r
 The man:irdma[4] driver has been updted.
 
 The man:ice[4] driver has been updated.
+
+Support for SIM7600G has been added to man:u3g[4].
+
+There have been many stability fixes to native and LinuxKPI-based wireless drivers. (Sponsored by The FreeBSD Foundation)
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -187,12 +158,25 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
+[[network-protocols]]
+== Network Protocols
+
+Lots of improvements to the network stack, including performance improvements and bug fixes for the man:sctp[4] stack.
+Specifically, support for the SCTP checksum offload feature has been added to the loopback interface.
+
 [[hardware]]
 == Hardware Support
 
 This section covers general hardware support for physical machines, hypervisors, and virtualization environments, as well as hardware changes and updates that do not otherwise fit in other sections of this document.
 
 Please see link:https://www.freebsd.org/releases/13.4R/hardware[the list of hardware] supported by {releaseCurrent}, as well as link:https://www.freebsd.org/platforms/[the platforms page] for the complete list of supported CPU architectures.
+
+[[processor]]
+=== Processor Support
+
+Added support for AMD Ryzen 7 "Phoenix" processors (family 0x19, model 0x70-0x7f) to the man:amdsmn[4] and man:amdtemp[4] drivers.
+This enables temperature readings of these CPUs via sysctl.
+The sensors function identically to those for the "Raphael" processors (model 0x60-0x6f); only the PCI device ID differs.
 
 [[hardware-virtualization]]
 === Virtualization Support
@@ -205,6 +189,8 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Man Pages
 
+References to the `disklabel` utility have been removed as they have been removed from the base system from FreeBSD 15.0 onwards.
+
 [[ports]]
 == Ports Collection and Package Infrastructure
 
@@ -213,5 +199,44 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 [[ports-packages]]
 === Packaging Changes
 
+DVD package set has been modernized.
+package:archivers/unzip[] has been removed as it is in base now.
+
+package:emulators/linux_base-c7[] has been removed as it is unlikely to be useful without other linux packages being installed.
+
+package:ports-mgmt/portmaster[] has been removed as it has been discouraged in favour of using pkg and binary packages.
+
+package:x11-drivers/xf86-video-vmware[] has been removed as it is no longer useful with the current version of xorg-server.
+
+package:devel/git[] has been replaced with package:devel/git@lite[] as this is sufficient for most purposes.
+
+package:sysutils/seatd[] and package:x11-wm/sway[] has been added for wayland support.
+
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
+
+FreeBSD 15.0 is not expected to include support for 32-bit platforms other than armv7.
+The armv6, i386, and powerpc platforms are deprecated and will be removed.
+64-bit systems will still be able to run older 32-bit binaries.
+
+We expect to support armv7 as a Tier 2 architecture in FreeBSD 15.0 and stable/15.
+However, we also anticipate that armv7 may be removed in FreeBSD 16.0.
+We will provide an update on the status of armv7 for both 15.x and 16.x at the time of 15.0 release.
+
+Support for executing 32-bit binaries on 64-bit platforms via the `COMPAT_FREEBSD32` option will continue for at least the stable/15 and stable/16 branches.
+Support for compiling individual 32-bit applications via `cc -m32` will also continue for at least the stable/15 branch, which includes suitable headers in [.filename]#/usr/include# and libraries in [.filename]#/usr/lib32#.
+
+Ports will not include support for deprecated 32-bit platforms for FreeBSD 15.0 and later releases.
+These future releases will not include binary packages or support for building packages from ports for deprecated 32-bit platforms.
+
+The FreeBSD stable/14 and earlier branches will retain existing 32-bit kernel and world support.
+Ports will retain existing support for building ports and packages for 32-bit systems on stable/14 and earlier branches as long as those branches are supported by the ports system.
+However, all 32-bit platforms are Tier-2 or Tier-3, and support for individual ports should be expected to degrade as upstreams deprecate 32-bit platforms.
+
+With the current support schedule, stable/14 will reach end of life (EOL) 5 years after the release of FreeBSD {releasePrev}.
+The EOL of stable/14 will mark the end of support for deprecated 32-bit platforms, including source releases, pre-built packages, and support for building applications from ports.
+With the release of {releasePrev} in November 2023, support for deprecated 32-bit platforms will end in November 2028.
+
+The project may choose to alter this approach when FreeBSD 15.0 is released by extending some level of support for one or more of the deprecated platforms in 15.0 or later.
+Any alterations will be driven by community feedback and committed efforts to support these platforms.
+Use FreeBSD {releasePrev} and following minor releases, or the stable/14 branch, to migrate off 32-bit platforms.
