--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -85,7 +85,7 @@ This change reduces the number of calls to man:tzset[3] and improves performance
 [[userland-contrib]]
 === Contributed Software
 
-`sqlite3` has been upgraded to 3.46.0a
+`sqlite3` has been upgraded to 3.46.0.
 
 `OpenSSH` has been to upgraded to 9.7p1.
 This release contains mostly bugfixes.
@@ -123,7 +123,7 @@ This section covers changes and additions to devices and device drivers since {r
 [[drivers-device]]
 === Device Drivers
 
-The man:irdma[4] driver has been updted.
+The man:irdma[4] driver has been updated.
 
 The man:ice[4] driver has been updated.
 
@@ -189,7 +189,7 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Man Pages
 
-References to the `disklabel` utility have been removed as they have been removed from the base system from FreeBSD 15.0 onwards.
+References to the legacy `disklabel` utility have been removed in favour of gpart. Future FreeBSD releases will remove this tool entirely."
 
 [[ports]]
 == Ports Collection and Package Infrastructure
