--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -57,14 +57,14 @@ This page lists teams, groups and individuals within the FreeBSD project with de
 The FreeBSD Core Team constitutes the project's "Board of Directors", responsible for deciding the project's overall goals and direction as well as managing specific areas of the FreeBSD project landscape.
 The Core Team is elected by the active developers in the project.
 
-* {allanjude}
-* {dch}
-* {glebius}
-* {hrs}
-* {lwhsu}
-* {mat}
-* {olivier}
-* {tcberner}
+* {allanjude} (Security Team Liaison)
+* {dch} (Release Engineering Team Liaison)
+* {glebius} (Bugmeister Team Liaison)
+* {hrs} (Foundation Liaison)
+* {lwhsu} (Documentation Engineering Team Liaison)
+* {mat} (Cluster Administrators Team Liaison)
+* {olivier} (CI Team Liaison)
+* {tcberner} (Ports Management Team Liaison)
 
 [[t-doceng]]
 == FreeBSD Documentation Engineering Team <doceng@FreeBSD.org>
